--- a/Movie Library MVC/Views/Movie/Index.cshtml
+++ b/Movie Library MVC/Views/Movie/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@model IEnumerable<Movie>
 
 <h2>Movies</h2>
+
+ <div style="display: block">
+     <a href="/Movie/InsertMovie/">Create a New Movie</a>
+ </div>
+
 <table class="table">
     <tr>
         <th>Movie ID</th>
