--- a/Movie Library MVC/Views/Movie/ViewMovie.cshtml
+++ b/Movie Library MVC/Views/Movie/ViewMovie.cshtml
@@ -20,3 +20,16 @@
         <td>@Model.SeriesOrMovie</td>
     </tr>
 </table>
+
+<div style="display: block">
+    <a href="/Movie/UpdateMovie/@Model.MovieID">Update this Movie</a>
+</div>
+
+<div style="display: block">
+
+    @using (Html.BeginForm("DeleteMovie", "Movie", "Post"))
+    {
+        <input type="hidden" asp-for="MovieID" value="@Model.MovieID" />
+        <input type="submit" onclick="return confirm('Are you sure?')" value="Delete this Movie" />
+    }
+</div>
